[package]
name = "repro_james"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-providers = { version = "*", features = ["ws"] }
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
